Style fix for overlapping CC license image in taxon overview gallery.
The Komodo Fix.

--- a/app/assets/stylesheets/accessibility.sass
+++ b/app/assets/stylesheets/accessibility.sass
@@ -849,6 +849,7 @@ p.flag, span.flag
             margin: 0 0 4px
             line-height: 120%
             &.owner
+              min-height: 1.2em
               padding-left: 85px
         .attribution
           margin: 0
@@ -859,9 +860,6 @@ p.flag, span.flag
             top: 0
             left: 0
             margin: 0
-          span.license
-            + .copy
-              padding-top: 1.2em
           img
             margin-top: -1px
           &.license_string
