--- a/app/assets/stylesheets/rtl/accessibility.sass
+++ b/app/assets/stylesheets/rtl/accessibility.sass
@@ -859,6 +859,7 @@ p.flag, span.flag
             margin: 0 0 4px
             line-height: 120%
             &.owner
+              min-height: 1.2em
               padding-right: 85px
         .attribution
           margin: 0
@@ -869,9 +870,6 @@ p.flag, span.flag
             top: 0
             right: 0
             margin: 0
-          span.license
-            + .copy
-              padding-top: 1.2em
           img
             margin-top: -1px
           &.license_string
